--- a/estilo.css
+++ b/estilo.css
@@ -104,7 +104,7 @@ html{
     transition: .3s;
 }
 .inicio .contenido-banner .redes a:hover{
-    background-color: #551cb6;
+    background-color: #ffffff;
 }
 .sobremi{
     background-color: #1fb3f7;
@@ -128,7 +128,7 @@ html{
     margin-bottom: 20px;
 }
 .sobremi .contenido-seccion p span{
-    color: #551cb6;
+    color: #ffffff;
     font-weight: bold;
 }
 .sobremi .fila{
@@ -151,11 +151,11 @@ html{
 }
 .sobremi .fila .col ul li strong{
     display: inline-block;
-    color: #551cb6;
+    color: #ffffff;
     width: 130px;
 }
 .sobremi .fila .col ul li span{
-    background-color: #551cb6;
+    background-color: #79a1c2;
     padding: 3px;
     font-weight: bold;
     border-radius: 5px;
@@ -176,7 +176,7 @@ html{
     justify-content: center;
     transition: .3s;
 }.sobremi .fila .col .contenedor-intereses .interes:hover{
-    background-color: #551cb6;
+    background-color: #aa91d5;
 }
 .sobremi .fila .col .contenedor-intereses .interes i{
     font-size: 30px;
@@ -201,7 +201,7 @@ html{
     left: 0;
     width: 0;
     height: 100%;
-    background-color: #551cb6;
+    background-color: #ad8ce5;
     z-index: -1;
     transition: 1s;
 }
@@ -210,7 +210,7 @@ html{
 }
 /* SECCION S K I L L S */
 .skills{
-    background-color: #252A2E;
+    background-color: #1fb3f7;
     color: #fff;
     padding: 50px 20px;
 }
@@ -245,12 +245,12 @@ html{
 .skills .skill .barra-skill{
     height: 8px;
     width: 80%;
-    background-color: #131517;
+    background-color: #000202;
     position: relative;
     margin-bottom: 30px;
 }
 .skills .skill .progreso{
-    background-color: #551cb6;
+    background-color: #000000;
     position: absolute;
     top: 0;
     left: 0;
@@ -260,7 +260,7 @@ html{
     position: absolute;
     height: 40px;
     width: 40px;
-    background-color: #551cb6;
+    background-color: #000000;
     border-radius: 50px;
     line-height: 40px;
     text-align: center;
@@ -360,7 +360,7 @@ html{
 }
 /* SECCION CURRICULUM */
 .curriculum{
-    background-color: #1e2326;
+    background-color: #1fb3f7;
     color: #fff;
     padding: 50px 20px;
 }
@@ -389,15 +389,15 @@ html{
     margin-bottom: 25px;
 }
 .curriculum .fila .izquierda{
-    border-right: 2px solid #252A2E;
+    border-right: 2px solid #1fb3f7;
 }
 .curriculum .fila .derecha{
-    border-left: 2px solid #252A2E;
+    border-left: 2px solid #1fb3f7;
 }
 .curriculum .fila .item{
     padding: 25px;
     margin-bottom: 30px;
-    background-color: #252A2E;
+    background-color: #1fb3f7;
     position: relative;
 }
 .curriculum .fila .item h4{
@@ -405,30 +405,30 @@ html{
     margin-bottom: 10px;
 }
 .curriculum .fila .item .casa{
-    color: #1fb3f7;
+    color: #000000;
     font-size: 22px;
     font-weight: bold;
     display: block;
 }
 .curriculum .fila .item .fecha{
     display: block;
-    color: #551cb6;
+    color: #000000;
     margin-bottom: 10px;
 }
 .curriculum .fila .item p{
     line-height: 24px;
 }
 .curriculum .fila .izq{
-    border-right: 2px solid #551cb6;
+    border-right: 2px solid #000000;
     margin-right: 20px;
 }
 .curriculum .fila .der{
-    border-left: 2px solid #551cb6;
+    border-left: 2px solid #000000;
     margin-left: 20px;
 }
 .curriculum .fila .item .conectori{
     height: 2px;
-    background-color: #551cb6;
+    background-color: #000000;
     width: 47px;
     position: absolute;
     top: 50%;
@@ -440,14 +440,14 @@ html{
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    background-color: #551cb6;
+    background-color: #020005;
     float: right;
     position: relative;
     bottom: 4px;
 }
 .curriculum .fila .item .conectord{
     height: 2px;
-    background-color: #551cb6;
+    background-color: #030009;
     width: 47px;
     position: absolute;
     top: 50%;
@@ -459,7 +459,7 @@ html{
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    background-color: #551cb6;
+    background-color: #020005;
     float: left;
     position: relative;
     bottom: 4px;
@@ -524,7 +524,7 @@ html{
 /* SECCION CONTACTO */
 .contacto{
     background-image: url(img/contact_bg.png);
-    background-color: #1e2326;
+    background-color: #1fb3f7;
     color: #fff;
     padding: 50px 0;
 }
@@ -552,7 +552,7 @@ html{
     padding: 18px;
     border: none;
     margin-bottom: 20px;
-    background-color: #252A2E;
+    background-color: #79a1c2;
     color: #fff;
     font-size: 18px;
 }
@@ -588,7 +588,7 @@ html{
 .contacto .col .info{
     position: absolute;
     top: 40%;
-    background-color: #252A2E;
+    background-color: #79a1c2;
     padding: 20px;
     max-swidth: 350px;
     left: 50%;
@@ -606,7 +606,7 @@ html{
     margin-right: 20px;
 }
 footer{
-    background-color: #252A2E;
+    background-color: #79a1c2;
     color: #fff;
     padding: 50px 0 30px 0;
     text-align: center;
@@ -656,7 +656,7 @@ footer .arriba{
         position: absolute;
         right: 0;
         top: 75px;
-        background-color: #252A2E;
+        background-color: #79a1c2;
         width: 180px;
     }
     nav.responsive ul{
